@@ -1,3 +1,8 @@
+2012-04-03  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* operation/messages/message_edit.php: Show user name
+	instead id and send messages for all group.
+
 2012-04-03 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* godmode/menu.php,
